# near-portfolio-manager

./: .gitignore  README.md  bootstrap.sh  build.sh  cargo.toml  delete_accounts.sh  package.json
agent/: build.zsh  requirements.txt  run.zsh  test.py
agent/src/: agent.py  metadata.json
agent/src/src/: intents.py  mpc.py  quote.py
contracts/proxy/: Cargo.toml  build.sh
contracts/proxy/src/: lib.rs  utils.rs  views.rs
contracts/proxy/src/models/: agent_info.rs  contract.rs  mod.rs  mpc.rs  ordered_map.rs  users.rs
contracts/proxy/src/models/intents/: mod.rs  token_diff.rs  tokens.rs
contracts/proxy/src/modules/: balance_portfolio.rs  create_portfolio.rs  mod.rs  register_agent.rs  withdraw_funds.rs
cron-job/: package.json  wrangler.toml
cron-job/src/: index.js
frontend/: .dockerignore  .env.template  .eslintrc.json  .gitignore  .global.d.ts  docker-compose.yml  dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/prisma/: schema.prisma
frontend/public/contracts/: baseuser.wasm
frontend/src/components/: AuthenticatedDashboard.tsx  Button.tsx  Input.tsx  Login.tsx  ModalHeader.tsx  Register.tsx  SkeletonLoader.tsx  UnauthenticatedHero.tsx  WelcomeModal.tsx
frontend/src/constants/: bundles.tsx  tokens.ts
frontend/src/context/: AuthContext.tsx  BalanceContext.tsx  JobContext.tsx  PriceContext.tsx  TokenContext.tsx
frontend/src/icons/: PasskeyIcon.tsx
scripts/: config.ts  deployContract.ts  patchContract.ts  registerAgent.ts
scripts/utils/: deploy.ts  deploymentUtils.ts  nearUtils.ts
(+46 files in other folders)
